# elgamal

./: .gitignore  Main.hs  README.md  elgamal.cabal  elgamal.hs
